# floy_attn

./: CMakeLists.txt  OWNERS  README.md  blacklist.txt  classify_rule.yaml  env.sh  run.sh
cmake/: OWNERS  config.cmake
cmake/scripts/: parse_changed_files.py
docs/: FlashAttentionScoreGrad.md  FlashAttentionScoreGradV2.md  FlashAttentionUnpaddingScoreGrad.md  FlashAttentionUnpaddingScoreGradV2.md  MatmulReduceScatter.md  MoeComputeExpertTokens.md  MoeFinalizeRouting.md  MoeFinalizeRoutingV2Grad.md  MoeInitRouting.md  MoeInitRoutingV2Grad.md  MoeTokenUnpermute.md  RotaryPosEmbInfer.md
docs/common/: 编译与运行样例.md
examples/: CMakeLists.txt
examples/transformer/: CMakeLists.txt
examples/transformer/flash_attention_score/: CMakeLists.txt  test_flash_attention_score.cpp
examples/transformer/floy_attention_score/: CMakeLists.txt  test_fused_floyd_attention.cpp
examples/transformer/scripts/: fa_generate_data.py  fa_print_result.py
output/: CANN-custom_ops-8.2.0.0-linux.aarch64.run
src/transformer/flash_attention_score/: flash_attention_score.cpp  flash_attention_score_s1s2_bn2gs1.h
src/transformer/flash_attention_score/ophost/: CMakeLists.txt  aclnn_flash_attention_score.cpp  aclnn_flash_attention_score.h  flash_attention_score.cpp  flash_attention_score.h  flash_attention_score_def.cpp  flash_attention_score_tiling.cpp  flash_attention_score_tiling_general.cpp
src/transformer/fused_floyd_attention/: fused_floyd_attention.cpp  fused_floyd_attention_common.h  fused_floyd_attention_s1s2_bn2gs1.h
src/transformer/fused_floyd_attention/ophost/: CMakeLists.txt  aclnn_fused_floyd_attention.cpp  aclnn_fused_floyd_attention.h  fused_floyd_attention.cpp  fused_floyd_attention.h  fused_floyd_attention_def.cpp  fused_floyd_attention_proto.cpp  fused_floyd_attention_tiling.cpp  fused_floyd_attention_tiling.h  fused_floyd_attention_tiling_common.cpp  fused_floyd_attention_tiling_common.h  fused_floyd_attention_tiling_general.cpp
src/utils/inc/log/inner/: dfx_base.h
src/utils/inc/tiling/: tiling_base.h
tests/: CMakeLists.txt
tests/ut/: CMakeLists.txt
tests/ut/ops_test/: CMakeLists.txt
tests/ut/ops_test/framework/: CMakeLists.txt
tests/ut/ops_test/framework/stubs/: CMakeLists.txt
tests/ut/ops_test/framework/utest/: CMakeLists.txt
tests/ut/ops_test/framework/utils/: CMakeLists.txt
tests/ut/ops_test/framework/utils/inc/tests/utils/: log.h
tests/ut/ops_test/framework/utils/src/: aclnn_tensor_list.cpp
tests/ut/ops_test/src/: CMakeLists.txt
tests/ut/ops_test/src/transformer/: CMakeLists.txt
tests/ut/ops_test/src/transformer/flash_attention/: CMakeLists.txt
